--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
-                <li><a href = "aaronben.html">Aaron Benyamini</a></li>
-                <li><a href = "daniel.html">Daniel Kates</a></li>
-                <li><a href = "aaronh.html">Aaron Hsu</a></li>
+                <li>Daniel Kates</li>
+                <li>Aaron Benyamini</li>
+                <li>Aaron Benyamini</li>
             </ul>
         </nav>
         <h1>Week Two discussion</h1>
@@ -25,14 +25,14 @@
     </header>
     
     <main>
-        <h2>Basketball</h2>
+        <h2> Our Topic</h2>
         <img src = "yourPicHere" width="200" alt = "Image of your Topic here.">
 
         <h3>Top Three Reasons We picked Our Topic</h3>
         <ul>
             <li>We all grew up playing basketball</li>
             <li>We enjoy watching basketball</li>
-            <li>We all still like to play basketball</li>
+            <li>We still like to play basketball</li>
         </ul>
     </main>
     
