--- a/daniel.html
+++ b/daniel.html
@@ -11,8 +11,9 @@
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
-                <li><a href = "daniel.html">Daniel Kates</a></li>
                 <li><a href = "aaronben.html">Aaron Benyamini</a></li>
+                <li><a href = "daniel.html">Daniel Kates</a></li>
+                <li><a href = "aaronh.html">Aaron Hsu</a></li>
             </ul>
         </nav>
         <h1>Week Two discussion</h1>
