--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href = "index.html">Home</a></li>
+                <li class = "active"><a href = "index.html">Home</a></li>
                 <li><a href = "aaronben.html">Aaron Benyamini</a></li>
                 <li><a href = "daniel.html">Daniel Kates</a></li>
                 <li><a href = "aaronh.html">Aaron Hsu</a></li>
