--- a/daniel.html
+++ b/daniel.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href = "index.html">Home</a></li>
                 <li><a href = "aaronben.html">Aaron Benyamini</a></li>
-                <li><a href = "daniel.html">Daniel Kates</a></li>
+                <li class = "active"><a href = "daniel.html">Daniel Kates</a></li>
                 <li><a href = "aaronh.html">Aaron Hsu</a></li>
             </ul>
         </nav>
