--- a/aaronben.html
+++ b/aaronben.html
@@ -13,7 +13,7 @@
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
-                <li><a href = "aaronben.html">Aaron Benyamini</a></li>
+                <li class = "active"><a href = "aaronben.html">Aaron Benyamini</a></li>
                 <li><a href = "daniel.html">Daniel Kates</a></li>
                 <li><a href = "aaronh.html">Aaron Hsu</a></li>
             </ul>
