--- a/aaronh.html
+++ b/aaronh.html
@@ -13,8 +13,8 @@
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
-                <li><a href = "aaronh.html">Aaron Hsu</a></li>
-                <li class = "active"><a href = "daniel.html">Daniel Kates</a></li>
+                <li class = "active"><a href = "aaronh.html">Aaron Hsu</a></li>
+                <li><a href = "daniel.html">Daniel Kates</a></li>
                 <li><a href = "aaronben.html">Aaron Benyamin</a></li>
             </ul>
         </nav>
