--- a/aaronh.html
+++ b/aaronh.html
@@ -15,7 +15,7 @@
                 <li><a href = "index.html">Home</a></li>
                 <li class = "active"><a href = "aaronh.html">Aaron Hsu</a></li>
                 <li><a href = "daniel.html">Daniel Kates</a></li>
-                <li><a href = "aaronben.html">Aaron Benyamin</a></li>
+                <li><a href = "aaronben.html">Aaron Benyamini</a></li>
             </ul>
         </nav>
         <h1>Week Two discussion</h1>
